fixing width of the tables to be able to put both tables aligned

--- a/omod/src/main/compass/sass/mirebalais.scss
+++ b/omod/src/main/compass/sass/mirebalais.scss
@@ -75,6 +75,10 @@ header {
       line-height: 1.1em;
     }
 
+    table {
+      max-width: 396px;
+    }
+
     span{
       display: block;
       font-size: 0.9em;
